# qmlcppwidget

./: CMakeLists.txt  README.md
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: main.qml
plugin/: QmlCppHelper.cpp  QmlCppHelper.h  QmlCppPlugin.cpp  QmlCppPlugin.h  qmldir
